tests/semantic/pass/usageOfVariableFromOuterScope.c
char x;

int (main())
{
        int y;
        {
          int z;
          (x = (y + z));
        }
        return y;
}

