tests/semantic/fail/call_the_wrong_parameter_police.c
int police(int i, char c) {return i+c;}

int main(void) {
  int i;
  police(1, &i);
  return 0;
}
